# linuxcnc-proto

./: .bazeliskrc  .bazelproject  .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-linuxcnc-proto  bazel-out  bazel-testlogs  extensions.bzl  linuxcnc.proto  repositories.bzl
.github/workflows/: bazelisk.yml
.ijwb/: .bazelproject  .gitignore
hal/: BUILD  BUILD.bazel  pin.proto
proto/linuxcnc/: BUILD.bazel  linuxcnc.proto
proto/linuxcnc/hal/: BUILD.bazel
proto/linuxcnc/status/: BUILD.bazel
proto/linuxcnc/status/automode/: BUILD.bazel
proto/linuxcnc/status/aux/: BUILD.bazel
proto/linuxcnc/status/axis/: BUILD.bazel
proto/linuxcnc/status/coolant/: BUILD.bazel
proto/linuxcnc/status/io/: BUILD.bazel  io.proto
proto/linuxcnc/status/jog/: BUILD.bazel
proto/linuxcnc/status/joint/: BUILD.bazel
proto/linuxcnc/status/lube/: BUILD.bazel
proto/linuxcnc/status/message/: BUILD.bazel  message.proto
proto/linuxcnc/status/motion/: BUILD.bazel  motion.proto
proto/linuxcnc/status/motion/mode/: BUILD.bazel
proto/linuxcnc/status/spindle/: BUILD.bazel  spindle.proto
proto/linuxcnc/status/spindle/dir/: BUILD.bazel  dir.proto
proto/linuxcnc/status/task/: BUILD.bazel  task.proto
proto/linuxcnc/status/tool/: BUILD.bazel
proto/linuxcnc/status/traj/: BUILD.bazel  traj.proto
status/: BUILD.bazel
status/auto/: BUILD.bazel  auto.proto
status/automode/: BUILD.bazel  auto_mode.proto
status/aux/: BUILD.bazel
status/axis/: BUILD.bazel
status/coolant/: BUILD.bazel
status/io/: BUILD.bazel  io.proto
status/jog/: BUILD.bazel  jog.proto
status/joint/: BUILD.bazel  joint.proto
status/lube/: BUILD.bazel
status/message/: BUILD.bazel  message.proto
status/motion/: BUILD.bazel  motion.proto
status/motion/mode/: BUILD.bazel  mode.proto
status/spindle/: BUILD.bazel  spindle.proto
status/spindle/dir/: BUILD.bazel
status/task/: BUILD.bazel  task.proto
status/tool/: BUILD.bazel
status/traj/: BUILD.bazel  traj.proto
