load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

#proto
proto_library(
    name = "linuxcnc_proto",
    srcs = ["linuxcnc.proto"],
    deps = [
        "//hal:component_proto",
        "//hal:pin_proto",
        "//status/automode",
        "//status/io",
        "//status/jog",
        "//status/message",
        "//status/motion",
        "//status/motion/mode",
        "//status/task",
    ],
)

# c++
cc_proto_library(
    name = "linuxcnc_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":linuxcnc_proto"],
)

cc_grpc_library(
    name = "linuxcnc_grpc",
    srcs = [":linuxcnc_proto"],
    grpc_only = True,
    use_external = True,
    #    has_services = True,
    visibility = ["//visibility:public"],
    deps = [
        ":linuxcnc_cc_proto",
    ],
)
