load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

#proto
proto_library(
    name = "linuxcnc_proto",
    srcs = ["linuxcnc.proto"],
    deps = [
        "//proto/linuxcnc/hal:component_proto",
        "//proto/linuxcnc/hal:pin_proto",
        "//proto/linuxcnc/status/automode",
        "//proto/linuxcnc/status/io",
        "//proto/linuxcnc/status/jog",
        "//proto/linuxcnc/status/message",
        "//proto/linuxcnc/status/motion",
        "//proto/linuxcnc/status/motion/mode",
        "//proto/linuxcnc/status/task",
    ],
)

# cc
cc_proto_library(
    name = "linuxcnc_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":linuxcnc_proto"],
)

cc_grpc_library(
    name = "linuxcnc_cc_grpc",
    srcs = [":linuxcnc_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [
        ":linuxcnc_cc_proto",
    ],
)

# kt
kt_jvm_proto_library(
    name = "linuxcnc_kt_proto",
    visibility = ["//visibility:public"],
    deps = [":linuxcnc_proto"],
)

kt_jvm_grpc_library(
    name = "linuxcnc_kt_grpc",
    srcs = [":linuxcnc_proto"],
    visibility = ["//visibility:public"],
    deps = [":linuxcnc_kt_proto"],
)
