load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "auto_mode",
    srcs = ["auto_mode.proto"],
)

cc_proto_library(
    name = "auto_cc_proto",
    deps = [":auto_mode"],
)
