load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "axis_proto",
    srcs = ["axis.proto"],
)

cc_proto_library(
    name = "axis_cc_proto",
    deps = [":axis_proto"],
)
