package(default_visibility = ["//visibility:public"])

proto_library(
    name = "io",
    srcs = ["io.proto"],
    deps = [
        "//status/aux",
        "//status/coolant",
        "//status/lube",
        "//status/tool",
    ],
)

cc_proto_library(
    name = "io_cc_proto",
    deps = [":io"],
)
