load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "jog_proto",
    srcs = ["jog.proto"],
)

cc_proto_library(
    name = "jog_cc_proto",
    deps = [":jog_proto"],
)
