load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "joint_proto",
    srcs = ["joint.proto"],
)

cc_proto_library(
    name = "joint_cc_proto",
    deps = [":joint_proto"],
)
