load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "motion",
    srcs = ["motion.proto"],
    deps = [
        "//proto/status:position_proto",
        "//proto/status/axis",
        "//proto/status/joint",
        "//proto/status/spindle",
        "//proto/status/traj",
    ],
)

cc_proto_library(
    name = "motion_cc_proto",
    deps = [":motion"],
)
