load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "motion",
    srcs = ["motion.proto"],
    deps = [
        "//status:position_proto",
        "//status/axis",
        "//status/joint",
        "//status/spindle",
        "//status/traj",
    ],
)

cc_proto_library(
    name = "motion_cc_proto",
    deps = [":motion"],
)
