load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "spindle_proto",
    srcs = ["spindle.proto"],
    deps = [
        "//proto/status/spindle/dir:dir_proto",
    ],
)

cc_proto_library(
    name = "spindle_cc_proto",
    deps = [":spindle_proto"],
)
