load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "spindle",
    srcs = ["spindle.proto"],
    deps = [
        "//status/spindle/dir",
    ],
)

cc_proto_library(
    name = "spindle_cc_proto",
    deps = [":spindle"],
)
