load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "traj_proto",
    srcs = ["traj.proto"],
    deps = ["//proto/status:position_proto"],
)

cc_proto_library(
    name = "traj_cc_proto",
    deps = [":traj_proto"],
)
