load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "traj",
    srcs = ["traj.proto"],
    deps = ["//status:position_proto"],
)

cc_proto_library(
    name = "traj_cc_proto",
    deps = [":traj"],
)
