load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pin_proto",
    srcs = ["pin.proto"],
)

proto_library(
    name = "component_proto",
    srcs = ["component.proto"],
)

cc_proto_library(
    name = "pin_cc_proto",
    deps = [":pin_proto"],
)

cc_proto_library(
    name = "component_cc_proto",
    deps = [":component_proto"],
)

kt_jvm_proto_library(
    name = "pin_kt_proto",
    deps = [":pin_proto"],
)

kt_jvm_proto_library(
    name = "component_kt_proto",
    deps = [":component_proto"],
)
