load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "automode",
    srcs = ["automode.proto"],
)

cc_proto_library(
    name = "autommode_cc_proto",
    deps = [":automode"],
)

kt_jvm_proto_library(
    name = "autommode_kt_proto",
    deps = [":automode"],
)
