load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "aux",
    srcs = ["aux.proto"],
)

cc_proto_library(
    name = "aux_cc_proto",
    deps = [":aux"],
)
