load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "aux",
    srcs = ["aux.proto"],
)

cc_proto_library(
    name = "aux_cc_proto",
    deps = [":aux"],
)

kt_jvm_proto_library(
    name = "aux_kt_proto",
    deps = [":aux"],
)
