load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "lube",
    srcs = ["lube.proto"],
)

cc_proto_library(
    name = "lube_cc_proto",
    deps = [":lube"],
)

kt_jvm_proto_library(
    name = "lube_kt_proto",
    deps = [":lube"],
)
