load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "motion",
    srcs = ["motion.proto"],
    deps = [
        "//proto/linuxcnc/status:position_proto",
        "//proto/linuxcnc/status/axis",
        "//proto/linuxcnc/status/joint",
        "//proto/linuxcnc/status/spindle",
        "//proto/linuxcnc/status/traj",
    ],
)

cc_proto_library(
    name = "motion_cc_proto",
    deps = [":motion"],
)
