load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "spindle",
    srcs = ["spindle.proto"],
    deps = [
        "//proto/linuxcnc/status/spindle/dir",
    ],
)

cc_proto_library(
    name = "spindle_cc_proto",
    deps = [":spindle"],
)
