load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "task",
    srcs = ["task.proto"],
    deps = [
        "//proto/linuxcnc/status:length_unit_proto",
        "//proto/linuxcnc/status:position_proto",
    ],
)

cc_proto_library(
    name = "task_cc_proto",
    deps = [":task"],
)
