load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "task",
    srcs = ["task.proto"],
    deps = [
        "//proto/linuxcnc/status:length_unit_proto",
        "//proto/linuxcnc/status:position_proto",
    ],
)

cc_proto_library(
    name = "task_cc_proto",
    deps = [":task"],
)

kt_jvm_proto_library(
    name = "task_kt_proto",
    deps = [":task"],
)
