load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "tool",
    srcs = ["tool.proto"],
)

cc_proto_library(
    name = "tool_cc_proto",
    deps = [":tool"],
)
