load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "traj",
    srcs = ["traj.proto"],
    deps = ["//proto/linuxcnc/status:position_proto"],
)

cc_proto_library(
    name = "traj_cc_proto",
    deps = [":traj"],
)
